--- a/index.html
+++ b/index.html
@@ -62,7 +62,24 @@
                 <img src="img/top-1.png" alt=""></div>
     </div>
         <div class="about-me">
-
+            <h1>About me</h1>
+            <div class="about-me-container">
+                <img src="img/nita.png" alt="">
+                <p>Hi ! My name is Nita Noviyanti. <br>
+                    currently studying Japanese Literature at Binus University<br>
+                    I’m more on the creative side, so I can draw and design.<br>
+                    And i live in Jakarta.<br>
+                    Nice to meet u~:)</p>
+            </div>
+        </div>
+        <div class="works">
+            <h1>Works</h1>
+            <div class="works-container">
+                <div class="illustrations">
+                    <p>Illustrations :</p>
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
