--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Nita's Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="src/vara.min.js"></script>
     
 </head>
@@ -16,7 +17,7 @@
     <div class="wrapper">
         <div class="nav">
             <div class="menu">
-                <a href="#" class="menu__link menu__link--active">
+                <a href="#" class="menu__link ">
                     Home
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" viewBox="0 0 152.9 43.4" style="enable-background:new 0 0 152.9 43.4;"
@@ -25,7 +26,7 @@
                             d="M151.9,13.6c0,0,3.3-9.5-85-8.3c-97,1.3-58.3,29-58.3,29s9.7,8.1,69.7,8.1c68.3,0,69.3-23.1,69.3-23.1 s1.7-10.5-14.7-18.4" />
                     </svg>
                 </a><br>
-                <a href="#" class="menu__link">
+                <a href="#about-me" class="menu__link aboutme">
                     About Me
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" viewBox="0 0 152.9 43.4" style="enable-background:new 0 0 152.9 43.4;"
@@ -34,7 +35,7 @@
                             d="M151.9,13.6c0,0,3.3-9.5-85-8.3c-97,1.3-58.3,29-58.3,29s9.7,8.1,69.7,8.1c68.3,0,69.3-23.1,69.3-23.1 s1.7-10.5-14.7-18.4" />
                     </svg>
                 </a><br>
-                <a href="#" class="menu__link">
+                <a href="#works" class="menu__link">
                     Works
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" viewBox="0 0 152.9 43.4" style="enable-background:new 0 0 152.9 43.4;"
@@ -43,7 +44,7 @@
                             d="M151.9,13.6c0,0,3.3-9.5-85-8.3c-97,1.3-58.3,29-58.3,29s9.7,8.1,69.7,8.1c68.3,0,69.3-23.1,69.3-23.1 s1.7-10.5-14.7-18.4" />
                     </svg>
                 </a><br>
-                <a href="#" class="menu__link">
+                <a href="#contact" class="menu__link">
                     Contact
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" viewBox="0 0 152.9 43.4" style="enable-background:new 0 0 152.9 43.4;"
@@ -65,9 +66,10 @@
                     <img src="img/top-1.png" alt="">
                 </div>
             </div>
-            <div class="about-me">
+            <div id="about-me">
                 <h1>About me</h1>
-                <div class="about-me-container">
+                <div class="about-me-container" data-aos="fade-left"data-aos-easing="linear"
+                data-aos-duration="1500">
                     <img src="img/nita.png" alt="">
                     <p>Hi ! My name is Nita Noviyanti. <br>
                         currently studying Japanese Literature at Binus University<br>
@@ -76,7 +78,7 @@
                         Nice to meet u~:)</p>
                 </div>
             </div>
-            <div class="works">
+            <div id="works">
                 <h1>Works</h1>
                 <div class="works-container">
                     <div class="illustrations">
@@ -100,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="designs">
+                    <div id="designs">
                         <p>Designs :</p>
                         <div class="designs-1">
                             <div class="container horizontal-scrollable">
@@ -157,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div class="contact">
+            <div id="contact">
                 <h1>Contact</h1>
                 <div class="contact-container">
                     <p>e-mail me !</p>
@@ -230,6 +232,10 @@
         },
       });
     </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
