--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             </div>
             <div id="works">
                 <h1>Works</h1>
-                <div class="works-container">
+                <div class="works-container" data-aos="fade-left"data-aos-easing="linear"
+                data-aos-duration="1500">
                     <div class="illustrations">
                         <p>Illustrations :</p>
                         <div class="sticker">
@@ -104,7 +105,8 @@
                     </div>
                     <div id="designs">
                         <p>Designs :</p>
-                        <div class="designs-1">
+                        <div class="designs-1" data-aos="fade-left"data-aos-easing="linear"
+                        data-aos-duration="1500">
                             <div class="container horizontal-scrollable">
                                 <div class="row text-center">
                                     <div class="col-xs-4"><img src="img/design-1.png" alt="" style="max-height:150px;"></div>
@@ -119,7 +121,8 @@
                             </div>
                         </div>
                         <br>
-                        <div class="designs-2">
+                        <div class="designs-2" data-aos="fade-left"data-aos-easing="linear"
+                        data-aos-duration="1500">
                             <div class="container horizontal-scrollable">
                                 <div class="row text-center">
                                     <div class="col-xs-4"><img src="img/banner-1.jpg" alt="" style="max-height:150px;"></div>
@@ -138,7 +141,8 @@
                     </div>
                     <div class="website-designs">
                         <p>Website Designs :</p>
-                        <div class="website-designs">
+                        <div class="website-designs" data-aos="fade-left"data-aos-easing="linear"
+                        data-aos-duration="1500">
                             <div class="click">
                                 <img src="img/click.png" alt="">
                             </div>
@@ -147,10 +151,10 @@
                                 <div class="swiper-wrapper">
                                   <!-- Slides -->
                                   <div class="swiper-slide"><a href="https://nitanovi.github.io/basic-coding/"><img src="img/web-1.png" alt=""></a></div>
-                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/basic-coding/"><img src="img/web-2.png" alt=""></a></div>
-                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/basic-coding/"><img src="img/web-3.png" alt=""></a></div>
-                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/basic-coding/"><img src="img/web-4.png" alt=""></a></div>
-                                  <div class="swiper-slide"><img src="img/web-5.png" alt=""></div>
+                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/storyteller/"><img src="img/web-2.png" alt=""></a></div>
+                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/ozora-resto/"><img src="img/web-3.png" alt=""></a></div>
+                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/ozora-hotel/"><img src="img/web-4.png" alt=""></a></div>
+                                  <div class="swiper-slide"><a href="https://nitanovi.github.io/japan-view/"><img src="img/web-5.png" alt=""></a></div>
                                 </div>
                                 <!-- If we need pagination -->
                                 <div class="swiper-pagination swiper-pagination"></div>
@@ -161,7 +165,8 @@
             </div>
             <div id="contact">
                 <h1>Contact</h1>
-                <div class="contact-container">
+                <div class="contact-container" data-aos="fade-left"data-aos-easing="linear"
+                data-aos-duration="1500">
                     <p>e-mail me !</p>
                     <div class="email">
                         <img src="img/email.png" alt="" style="max-height:150px;">
